<?xml version="1.0" encoding="utf-8"?>

<!--layout_width:幅-->
<!--layout_height:高さ-->
<!--orientation:方向(縦か横)-->
<!--padding:空白(上下左右全てに空白)-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    >


    <ViewStub
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewStub"
        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/title_marginBottom"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="今日の運勢"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/title_textSize"
        android:textColor="@color/Color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/main_etx_name" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_birthday"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--android:entries="@array/main_spn_era":年号のデータを設定-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_spn_era"
        android:entries="@array/main_spn_era"/>

    <!--生年月日入力欄-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="2"
        android:id="@+id/main_etx_year" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_year"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

        <!--月入力欄-->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="2"
            android:id="@+id/main_etx_month" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_txv_month"/>

        <!--日入力欄-->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="2"
            android:id="@+id/main_etx_day" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_txv_day"/>

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txv_gender"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--ラジオボタン-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/main_rd_grp">

        <!--android:checked="true":最初チェックを入れるかどうか-->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_radio_btn_male"
            android:id="@+id/main_rd_btn_male"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_radio_btn_female"
            android:id="@+id/main_rd_btn_female" />

    </RadioGroup>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_divine"
        android:id="@+id/main_btn_divine"
        android:layout_weight="1"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_init"
        android:id="@+id/main_btn_init"
        android:layout_weight="1"/>
        </LinearLayout>
</LinearLayout>